--- a/workbench.cabal
+++ b/workbench.cabal
@@ -19,9 +19,9 @@ library
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-executable client-exe
+executable task-ventillator-exe
   hs-source-dirs:      app
-  main-is:             WeatherClient.hs
+  main-is:             TaskVentillator.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , workbench
@@ -30,7 +30,7 @@ executable client-exe
                      , bytestring
   default-language:    Haskell2010
 
-executable server-exe
+executable weather-server-exe
   hs-source-dirs:      app
   main-is:             WeatherServer.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
@@ -40,6 +40,18 @@ executable server-exe
                      , random
                      , bytestring
   default-language:    Haskell2010
+
+executable multi-socket-poller-exe
+  hs-source-dirs:      app
+  main-is:             MultiSocketPoller.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , workbench
+                     , zeromq4-haskell
+                     , random
+                     , bytestring
+                     , time                     
+  default-language:    Haskell2010  
 
 test-suite workbench-test
   type:                exitcode-stdio-1.0
