--- a/workbench.cabal
+++ b/workbench.cabal
@@ -19,9 +19,9 @@ library
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-executable server-exe
+executable publisher-exe
   hs-source-dirs:      app
-  main-is:             HelloWorldRouter.hs
+  main-is:             PubSubEnvelopePublisher.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , workbench
@@ -31,9 +31,9 @@ executable server-exe
                      , time
   default-language:    Haskell2010
 
-executable client-exe
+executable subscriber-exe
   hs-source-dirs:      app
-  main-is:             HelloWorldClient.hs
+  main-is:             PubSubEnvelopeSubscriber.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , workbench
